--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,parskip=half-,chapterprefix=true,appendixprefix=true,numbers=noenddot,bibliography=totoc]{scrreprt}
 
-\input{internal/preamble.tex} % modify here the details of the thesis such as titple, authors, supervisors, year of publication... and configuration of packages
+\input{internal/preamble.tex} % modify here the details of the thesis such as title, authors, supervisors, year of publication... and configuration of packages
 
 \input{internal/glossary.tex} % include here a list of abbreviations used in the document body.
 
